indus/test/test_examples/type_errors/for2.tpc
tele bit<32> x;
init {
    for (y in x) {
        
    }
} 
telemetry {} 
check {}